Update Discord badge in VS Code extension manifest.

--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -41,8 +41,8 @@
     },
     {
       "description": "Discord",
-      "url": "https://img.shields.io/discord/960716713136095232?color=peru&label=discord",
-      "href": "https://discord.gg/uD8maMVVFX"
+      "url": "https://img.shields.io/badge/discord-chat-7289da?logo=discord",
+      "href": "https://discord.gg/wtzCfaX2Nj"
     }
   ],
   "categories": [
