--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -329,6 +329,7 @@
     "@typescript-eslint/no-dynamic-delete": "error",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-empty-interface": "error",
+    "@typescript-eslint/no-empty-object-type": "error",
     "@typescript-eslint/no-explicit-any": [
       "error",
       {
