Configure the new @typescript-eslint/no-unnecessary-parameter-property-assignment rule.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -404,6 +404,7 @@
         "allowConstantLoopConditions": true
       }
     ],
+    "@typescript-eslint/no-unnecessary-parameter-property-assignment": "error",
     "@typescript-eslint/no-unnecessary-qualifier": "error",
     "@typescript-eslint/no-unnecessary-template-expression": "error",
     "@typescript-eslint/no-unnecessary-type-arguments": "error",
