--- a/src/language/service/service.csproj
+++ b/src/language/service/service.csproj
@@ -10,8 +10,9 @@ This package provides the Language Server Protocol implementation.</PackageDescr
     </PropertyGroup>
 
     <ItemGroup>
-        <Using Include="Microsoft.Extensions.Logging" />
-        <Using Include="OmniSharp.Extensions.LanguageServer.Server" />
+        <Using Include="Draco.Lsp.Model" />
+        <Using Include="Draco.Lsp.Server" />
+        <Using Include="System.IO.Pipelines" />
         <Using Include="Vezel.Celerity.Diagnostics" />
     </ItemGroup>
 
@@ -20,7 +21,7 @@ This package provides the Language Server Protocol implementation.</PackageDescr
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="OmniSharp.Extensions.LanguageServer" />
+        <PackageReference Include="Draco.Lsp" />
     </ItemGroup>
 
     <Import Project="../core/core.targets" />
