--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -221,11 +221,11 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "8.57.0",
     "@stylistic/eslint-plugin": "2.3.0",
+    "@types/eslint__js": "8.42.3",
     "@types/node": "18.15.0",
     "@types/vscode": "1.83.0",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
     "@vscode/vsce": "2.30.0",
     "cpy-cli": "5.0.0",
     "esbuild": "0.23.0",
@@ -236,13 +236,14 @@
     "ovsx": "0.9.1",
     "rimraf": "6.0.1",
     "symlink-dir": "6.0.1",
-    "typescript": "5.5.3"
+    "typescript": "5.5.3",
+    "typescript-eslint": "7.16.0"
   },
   "dependencies": {
     "vscode-languageclient": "9.0.1"
   },
   "scripts": {
-    "build": "tsc --noEmit && eslint src --ext ts && rimraf ../../../out/bin/src/extensions/vscode && esbuild src/extension.ts --external:vscode --platform=node --target=es2022 --bundle --minify --sourcemap --outdir=../../../out/bin/src/extensions/vscode && cpy README.md language-configuration.json package.json snippets ../../../out/bin/src/extensions/vscode && mkdirp ../../../out/bin/src/extensions/vscode/syntaxes && js-yaml syntaxes/celerity.tmLanguage.yml > ../../../out/bin/src/extensions/vscode/syntaxes/celerity.tmLanguage.json && symlink-dir node_modules ../../../out/bin/src/extensions/vscode/node_modules && cd ../../../out/bin/src/extensions/vscode && cpy ../../../../../LICENSE-0BSD . --flat --rename=LICENSE && cpy \"../../../../../celerity.{png,svg}\" . --flat && nbgv-setversion",
+    "build": "tsc --noEmit && eslint src && rimraf ../../../out/bin/src/extensions/vscode && esbuild src/extension.ts --external:vscode --platform=node --target=es2022 --bundle --minify --sourcemap --outdir=../../../out/bin/src/extensions/vscode && cpy README.md language-configuration.json package.json snippets ../../../out/bin/src/extensions/vscode && mkdirp ../../../out/bin/src/extensions/vscode/syntaxes && js-yaml syntaxes/celerity.tmLanguage.yml > ../../../out/bin/src/extensions/vscode/syntaxes/celerity.tmLanguage.json && symlink-dir node_modules ../../../out/bin/src/extensions/vscode/node_modules && cd ../../../out/bin/src/extensions/vscode && cpy ../../../../../LICENSE-0BSD . --flat --rename=LICENSE && cpy \"../../../../../celerity.{png,svg}\" . --flat && touch .vscodeignore && nbgv-setversion",
     "pack": "cd ../../../out/bin/src/extensions/vscode && mkdirp ../../../../pkg/vscode && vsce package -o ../../../../pkg/vscode"
   },
   "vsce": {
