--- a/.globalconfig
+++ b/.globalconfig
@@ -17,7 +17,9 @@ csharp_preferred_modifier_order = public, private, protected, internal, file, st
 csharp_prefer_braces = false
 csharp_prefer_simple_default_expression = true
 csharp_prefer_simple_using_statement = true
+csharp_prefer_static_anonymous_function = true
 csharp_prefer_static_local_function = true
+csharp_prefer_system_threading_lock = true
 csharp_preserve_single_line_blocks = true
 csharp_preserve_single_line_statements = false
 csharp_space_after_cast = false
@@ -194,6 +196,7 @@ dotnet_diagnostic.CA1511.severity = error
 dotnet_diagnostic.CA1512.severity = error
 dotnet_diagnostic.CA1513.severity = error
 dotnet_diagnostic.CA1514.severity = error
+dotnet_diagnostic.CA1515.severity = error
 dotnet_diagnostic.CA1700.severity = error
 dotnet_diagnostic.CA1707.severity = error
 dotnet_diagnostic.CA1708.severity = error
@@ -270,6 +273,8 @@ dotnet_diagnostic.CA1867.severity = error
 dotnet_diagnostic.CA1868.severity = error
 dotnet_diagnostic.CA1869.severity = error
 dotnet_diagnostic.CA1870.severity = error
+dotnet_diagnostic.CA1871.severity = error
+dotnet_diagnostic.CA1872.severity = error
 dotnet_diagnostic.CA2000.severity = error
 dotnet_diagnostic.CA2002.severity = error
 dotnet_diagnostic.CA2007.severity = error
@@ -286,6 +291,7 @@ dotnet_diagnostic.CA2018.severity = error
 dotnet_diagnostic.CA2019.severity = error
 dotnet_diagnostic.CA2020.severity = error
 dotnet_diagnostic.CA2021.severity = error
+dotnet_diagnostic.CA2022.severity = error
 dotnet_diagnostic.CA2100.severity = error
 dotnet_diagnostic.CA2101.severity = error
 dotnet_diagnostic.CA2119.severity = error
@@ -330,6 +336,10 @@ dotnet_diagnostic.CA2257.severity = error
 dotnet_diagnostic.CA2259.severity = error
 dotnet_diagnostic.CA2260.severity = error
 dotnet_diagnostic.CA2261.severity = error
+dotnet_diagnostic.CA2262.severity = error
+dotnet_diagnostic.CA2263.severity = error
+dotnet_diagnostic.CA2264.severity = error
+dotnet_diagnostic.CA2265.severity = error
 dotnet_diagnostic.CA2300.severity = error
 dotnet_diagnostic.CA2301.severity = error
 dotnet_diagnostic.CA2302.severity = error
@@ -522,6 +532,8 @@ dotnet_diagnostic.IDE0302.severity = error
 dotnet_diagnostic.IDE0303.severity = error
 dotnet_diagnostic.IDE0304.severity = error
 dotnet_diagnostic.IDE0305.severity = error
+dotnet_diagnostic.IDE0320.severity = error
+dotnet_diagnostic.IDE0330.severity = error
 dotnet_diagnostic.IDE1005.severity = error
 dotnet_diagnostic.IDE1006.severity = error
 
@@ -832,6 +844,11 @@ dotnet_diagnostic.SYSLIB0050.severity = error
 dotnet_diagnostic.SYSLIB0051.severity = error
 dotnet_diagnostic.SYSLIB0052.severity = error
 dotnet_diagnostic.SYSLIB0053.severity = error
+dotnet_diagnostic.SYSLIB0054.severity = error
+dotnet_diagnostic.SYSLIB0055.severity = error
+dotnet_diagnostic.SYSLIB0056.severity = error
+dotnet_diagnostic.SYSLIB0057.severity = error
+dotnet_diagnostic.SYSLIB0058.severity = error
 dotnet_diagnostic.SYSLIB1001.severity = error
 dotnet_diagnostic.SYSLIB1002.severity = error
 dotnet_diagnostic.SYSLIB1003.severity = error
@@ -928,6 +945,8 @@ dotnet_diagnostic.SYSLIB1221.severity = error
 dotnet_diagnostic.SYSLIB1222.severity = error
 dotnet_diagnostic.SYSLIB1223.severity = error
 dotnet_diagnostic.SYSLIB1224.severity = error
+dotnet_diagnostic.SYSLIB1225.severity = error
+dotnet_diagnostic.SYSLIB1230.severity = error
 
 dotnet_diagnostic.VSTHRD001.severity = none
 dotnet_diagnostic.VSTHRD002.severity = none
@@ -951,6 +970,7 @@ dotnet_diagnostic.VSTHRD111.severity = none
 dotnet_diagnostic.VSTHRD112.severity = none
 dotnet_diagnostic.VSTHRD113.severity = none
 dotnet_diagnostic.VSTHRD114.severity = error
+dotnet_diagnostic.VSTHRD115.severity = none
 dotnet_diagnostic.VSTHRD200.severity = error
 
 dotnet_diagnostic.xUnit1000.severity = error
