Set UnicodeEnvironment=true.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -35,6 +35,7 @@
         <SymbolVisibility>Hidden</SymbolVisibility>
         <TargetFramework>net9.0</TargetFramework>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <UnicodeEnvironment>true</UnicodeEnvironment>
     </PropertyGroup>
 
     <PropertyGroup>
